--- a/viz_1.Rmd
+++ b/viz_1.Rmd
@@ -3,6 +3,8 @@ title: "Viz 1"
 author: "Casandra Laney"
 date: "2025-09-25"
 output: github_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r}
@@ -63,8 +65,54 @@ weather_df |>
 
 weather_df |>
   ggplot(aes(x = tmin, y = tmax, color = name)) +
-  geom_point(alpha = 0.3) +
-  geom_smooth()
+  geom_point(aes(color = name, size = prcp), alpha = 0.3) +
+  geom_smooth(se = FALSE)
+
+```
+
+Use faceting real quick
+
+```{r}
+
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(aes(color = name), alpha = 0.3, size = 0.8) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~ name)
+
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(aes(color = name), alpha = 0.3, size = 0.8) +
+  geom_smooth(se = FALSE) +
+  facet_grid(name ~ .)
+
+```
+
+Let's make a somewhat more interesting scatterplot
+
+```{r}
+
+weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name, shape = name)) +
+  geom_point(aes(size = prcp), alpha = 0.3) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~ name)
+
+```
+
+Learning Assessment
+
+```{r}
+
+weather_df |>
+  filter(name == "CentralPark_NY") |> 
+  mutate(
+    tmax_fahr = tmax * (9 / 5) + 32,
+    tmin_fahr = tmin * (9 / 5) + 32) |> 
+  ggplot(aes(x =tmin_fahr, y = tmax_fahr)) +
+  geom_point() +
+  geom_smooth(method = "lm", se = FALSE) +
+  facet_grid(. ~ name)
 
 ```
 
