--- a/viz_2.Rmd
+++ b/viz_2.Rmd
@@ -147,3 +147,49 @@ ggp_temp_season =
 ```
 
 # Data Manipulation
+
+Let's make temperature violin plots.
+
+```{r}
+weather_df |>
+  mutate(name = fct_relevel(name, c("Molokai_HI", "CentralPark_NY", "Waterhole_WA"))) |>
+  ggplot(aes(x = name, y = tmax, fill = name)) +
+  geom_violin(alpha = 0.5)
+
+```
+
+```{r}
+weather_df |>
+  mutate(name = fct_reorder(name, tmax)) |>
+  ggplot(aes(x = name, y = tmax, fill = name)) +
+  geom_violin(alpha = 0.5)
+
+```
+
+What about data tidyness?
+
+```{r}
+pulse_df =
+  haven::read_sas("data/public_pulse_data.sas7bdat") |>
+  janitor::clean_names() |>
+  pivot_longer(
+    bdi_score_bl:bdi_score_12m,
+    names_to = "visit",
+    values_to = "bdi"
+  ) |>
+  mutate(visit = fct_inorder(visit))
+
+pulse_df |>
+  ggplot(aes(x = visit, y = bdi)) +
+  geom_boxplot()
+```
+
+
+
+```{r}
+pups_df =
+  read.csv("data/FAS_pups.csv", skip = 3) |>
+  janitor::clean_names()
+
+```
+
