--- a/viz_2.Rmd
+++ b/viz_2.Rmd
@@ -188,8 +188,35 @@ pulse_df |>
 
 ```{r}
 pups_df =
-  read.csv("data/FAS_pups.csv", skip = 3) |>
-  janitor::clean_names()
+  read.csv("data/FAS_pups.csv", na = c("NA", ".", ""), skip = 3) |>
+  janitor::clean_names() |>
+  mutate(
+    sex = case_match(
+      sex,
+      1 ~ "male",
+      2 ~ "female"
+    )
+  )
 
+litter_df = 
+  read_csv("./data/FAS_litters.csv", na = c("NA", ".", "")) |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "tx_day"), sep = 3)
+
+fas_df = left_join(pups_df, litter_df, by = "litter_number") 
+
+fas_df |>
+  select(pd_ears:tx_day) |>
+  pivot_longer(
+    pd_ears:pd_walk,
+    names_to = "outcome",
+    names_prefix = "pd_",
+    values_to = "pn_day") |>
+  mutate(outcome = fct_reprder(outcome, pn_day)) |>
+  drop_na() |>
+    mutate(outcome = forcats::fct_reorder(outcome, pn_day, median)) |> 
+  ggplot(aes(x = dose, y = pn_day)) + 
+  geom_violin() + 
+  facet_grid(day_of_tx ~ outcome)
 ```
 
